/* -------------------------------------------------------------------------- */
/* Copyright 2002-2025, OpenNebula Project, OpenNebula Systems                */
/*                                                                            */
/* Licensed under the Apache License, Version 2.0 (the "License"); you may    */
/* not use this file except in compliance with the License. You may obtain    */
/* a copy of the License at                                                   */
/*                                                                            */
/* http://www.apache.org/licenses/LICENSE-2.0                                 */
/*                                                                            */
/* Unless required by applicable law or agreed to in writing, software        */
/* distributed under the License is distributed on an "AS IS" BASIS,          */
/* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.   */
/* See the License for the specific language governing permissions and        */
/* limitations under the License.                                             */
/* -------------------------------------------------------------------------- */
syntax = "proto3";

import "shared.proto";

package one.vm;

option go_package = "github.com/OpenNebula/one/src/oca/go/src/goca/api/vm";

message AllocateRequest
{
  string session_id = 1;
  string template   = 2;
  bool hold         = 3;
}

message InfoRequest
{
  string session_id = 1;
  int32 oid         = 2;
  bool decrypt      = 3;
}

message UpdateRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string template   = 3;
  int32 append      = 4;
}

message RenameRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string name       = 3;
}

message ChmodRequest
{
  string session_id   = 1;
  int32 oid           = 2;
  sint32 user_use     = 3;
  sint32 user_manage  = 4;
  sint32 user_admin   = 5;
  sint32 group_use    = 6;
  sint32 group_manage = 7;
  sint32 group_admin  = 8;
  sint32 other_use    = 9;
  sint32 other_manage = 10;
  sint32 other_admin  = 11;
}

message ChownRequest
{
  string session_id = 1;
  int32 oid         = 2;
  sint32 user_id    = 3;
  sint32 group_id   = 4;
}

message LockRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 level       = 3;
  bool test         = 4;
}

message UnlockRequest
{
  string session_id = 1;
  int32 oid         = 2;
}

message DeployRequest
{
  string session_id   = 1;
  int32 oid           = 2;
  int32 hid           = 3;
  bool no_overcommit  = 4;
  sint32 ds_id        = 5;
  string nic_template = 6;
}

message ActionRequest
{
  string session_id  = 1;
  string action_name = 2;
  int32 oid          = 3;
}

message MigrateRequest
{
  string session_id    = 1;
  int32 oid            = 2;
  int32 hid            = 3;
  bool live            = 4;
  bool no_overcommit   = 5;
  sint32 ds_id         = 6;
  int32 migration_type = 7;
}

message DiskSaveAsRequest
{
  string session_id  = 1;
  int32 oid          = 2;
  int32 disk_id      = 3;
  string name        = 4;
  string image_type  = 5;
  sint32 snap_id     = 6;
}

message DiskSnapshotCreateRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 disk_id     = 3;
  string name       = 4;
}

message DiskSnapshotDeleteRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 disk_id     = 3;
  int32 snap_id     = 4;
}

message DiskSnapshotRevertRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 disk_id     = 3;
  int32 snap_id     = 4;
}

message DiskSnapshotRenameRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 disk_id     = 3;
  int32 snap_id     = 4;
  string name       = 5;
}

message DiskAttachRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string template   = 3;
}

message DiskDetachRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 disk_id     = 3;
}

message DiskResizeRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 disk_id     = 3;
  string size       = 4;
}

message NicAttachRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string template   = 3;
}

message NicDetachRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 nic_id      = 3;
}

message NicUpdateRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 nic_id      = 3;
  string template   = 4;
  int32 append      = 5;
}

message SGAttachRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 nic_id      = 3;
  int32 sg_id       = 4;
}

message SGDetachRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 nic_id      = 3;
  int32 sg_id       = 4;
}

message SnapshotCreateRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string name       = 3;
}

message SnapshotDeleteRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 snap_id     = 3;
}

message SnapshotRevertRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 snap_id = 3;
}

message ResizeRequest
{
  string session_id  = 1;
  int32 oid          = 2;
  string template    = 3;
  bool no_overcommit = 4;
}

message UpdateConfRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string template   = 3;
  int32 append      = 4;
}

message RecoverRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 operation   = 3;
}

message MonitoringRequest
{
  string session_id = 1;
  int32 oid         = 2;
}

message SchedAddRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string template   = 3;
}

message SchedUpdateRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 sched_id    = 3;
  string template   = 4;
}

message SchedDeleteRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 sched_id    = 3;
}

message BackupRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 ds_id       = 3;
  bool reset        = 4;
}

message BackupCancelRequest
{
  string session_id = 1;
  int32 oid         = 2;
}

message RestoreRequest
{
  string session_id  = 1;
  int32 oid          = 2;
  int32 image_id     = 3;
  int32 increment_id = 4;
  int32 disk_id      = 5;
}

message PciAttachRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string template   = 3;
}

message PciDetachRequest
{
  string session_id = 1;
  int32 oid         = 2;
  int32 pci_id      = 3;
}

message ExecRequest
{
  string session_id = 1;
  int32 oid         = 2;
  string cmd        = 3;
  string cmd_stdin  = 4;
}

message ExecRetryRequest
{
  string session_id = 1;
  int32 oid         = 2;
}

message ExecCancelRequest
{
  string session_id = 1;
  int32 oid         = 2;
}

message PoolInfoRequest
{
  string session_id  = 1;
  sint32 filter_flag = 2;
  sint32 start       = 3;
  sint32 end         = 4;
  sint32 state       = 5;
  string filter      = 6;
}

message PoolInfoSetRequest
{
  string session_id  = 1;
  string ids         = 2;
  bool extended      = 3;
}

message PoolMonitoringRequest
{
  string session_id  = 1;
  sint32 filter_flag = 2;
  sint32 seconds     = 3;
}

message PoolAccountingRequest
{
  string session_id  = 1;
  sint32 filter_flag = 2;
  int64 start_time   = 3;
  int64 end_time     = 4;
}

message PoolShowbackRequest
{
  string session_id  = 1;
  sint32 filter_flag = 2;
  int32 start_month  = 3;
  int32 start_year   = 4;
  int32 end_month    = 5;
  int32 end_year     = 6;
}

message PoolCalculateShowbackRequest
{
  string session_id = 1;
  int32 start_month = 2;
  int32 start_year  = 3;
  int32 end_month   = 4;
  int32 end_year    = 5;
}

service VirtualMachineService
{
  rpc Allocate (one.vm.AllocateRequest) returns (one.ResponseID);

  rpc Info (one.vm.InfoRequest) returns (one.ResponseXML);

  rpc Update (one.vm.UpdateRequest) returns (one.ResponseID);

  rpc Rename (one.vm.RenameRequest) returns (one.ResponseID);

  rpc Chmod (one.vm.ChmodRequest) returns (one.ResponseID);

  rpc Chown (one.vm.ChownRequest) returns (one.ResponseID);

  rpc Lock (one.vm.LockRequest) returns (one.ResponseID);

  rpc Unlock (one.vm.UnlockRequest) returns (one.ResponseID);

  rpc Deploy (one.vm.DeployRequest) returns (one.ResponseID);

  rpc Action (one.vm.ActionRequest) returns (one.ResponseID);

  rpc Migrate (one.vm.MigrateRequest) returns (one.ResponseID);

  rpc DiskSaveAs (one.vm.DiskSaveAsRequest) returns (one.ResponseID);

  rpc DiskSnapshotCreate (one.vm.DiskSnapshotCreateRequest) returns (one.ResponseID);

  rpc DiskSnapshotDelete (one.vm.DiskSnapshotDeleteRequest) returns (one.ResponseID);

  rpc DiskSnapshotRevert (one.vm.DiskSnapshotRevertRequest) returns (one.ResponseID);

  rpc DiskSnapshotRename (one.vm.DiskSnapshotRenameRequest) returns (one.ResponseID);

  rpc DiskAttach (one.vm.DiskAttachRequest) returns (one.ResponseID);

  rpc DiskDetach (one.vm.DiskDetachRequest) returns (one.ResponseID);

  rpc DiskResize (one.vm.DiskResizeRequest) returns (one.ResponseID);

  rpc NicAttach (one.vm.NicAttachRequest) returns (one.ResponseID);

  rpc NicDetach (one.vm.NicDetachRequest) returns (one.ResponseID);

  rpc NicUpdate (one.vm.NicUpdateRequest) returns (one.ResponseID);

  rpc SGAttach (one.vm.SGAttachRequest) returns (one.ResponseID);

  rpc SGDetach (one.vm.SGDetachRequest) returns (one.ResponseID);

  rpc SnapshotCreate (one.vm.SnapshotCreateRequest) returns (one.ResponseID);

  rpc SnapshotDelete (one.vm.SnapshotDeleteRequest) returns (one.ResponseID);

  rpc SnapshotRevert (one.vm.SnapshotRevertRequest) returns (one.ResponseID);

  rpc Resize (one.vm.ResizeRequest) returns (one.ResponseID);

  rpc UpdateConf (one.vm.UpdateConfRequest) returns (one.ResponseID);

  rpc Recover (one.vm.RecoverRequest) returns (one.ResponseID);

  rpc Monitoring (one.vm.MonitoringRequest) returns (one.ResponseXML);

  rpc SchedAdd (one.vm.SchedAddRequest) returns (one.ResponseID);

  rpc SchedUpdate (one.vm.SchedUpdateRequest) returns (one.ResponseID);

  rpc SchedDelete (one.vm.SchedDeleteRequest) returns (one.ResponseID);

  rpc Backup (one.vm.BackupRequest) returns (one.ResponseID);

  rpc BackupCancel (one.vm.BackupCancelRequest) returns (one.ResponseID);

  rpc Restore (one.vm.RestoreRequest) returns (one.ResponseID);

  rpc PciAttach (one.vm.PciAttachRequest) returns (one.ResponseID);

  rpc PciDetach (one.vm.PciDetachRequest) returns (one.ResponseID);

  rpc Exec (one.vm.ExecRequest) returns (one.ResponseID);

  rpc ExecRetry (one.vm.ExecRetryRequest) returns (one.ResponseID);

  rpc ExecCancel (one.vm.ExecCancelRequest) returns (one.ResponseID);

  rpc PoolInfo (one.vm.PoolInfoRequest) returns (one.ResponseXML);

  rpc PoolInfoExtended (one.vm.PoolInfoRequest) returns (one.ResponseXML);

  rpc PoolInfoSet (one.vm.PoolInfoSetRequest) returns (one.ResponseXML);

  rpc PoolMonitoring (one.vm.PoolMonitoringRequest) returns (one.ResponseXML);

  rpc PoolAccounting (one.vm.PoolAccountingRequest) returns (one.ResponseXML);

  rpc PoolShowback (one.vm.PoolShowbackRequest) returns (one.ResponseXML);

  rpc PoolCalculateShowback (one.vm.PoolCalculateShowbackRequest) returns (one.ResponseXML);
}
